added reference for robot figure

--- a/bib/diplomamunka.bib
+++ b/bib/diplomamunka.bib
@@ -90,3 +90,9 @@
 	school = {Neumann Faculty of Informatics, Óbuda University},
 	year = {2020}
 }
+
+@misc{robotkar-kep,
+author = {Universal Robots},
+    title = {Universal Robots e-Series},
+    howpublished = { {\url{https://www.universal-robots.com/hu/e-series/}, utoljára megtekintve: 2022.03.20.}}
+}
