corrected figure reference

--- a/document.tex
+++ b/document.tex
@@ -55,7 +55,6 @@
 \makedefaultpagestyle
 
 %TODO hivatkozások előtt space-t hagyni
-%TODO képeknél hivatkozást zárójelbe rakni: (Forrás:cite)
 %TODO XMl szekvencia diagram készítése a teljes folyamat leírására
 %TODO hivatkozások javítása
 
@@ -81,7 +80,7 @@
 	\begin{figure}[h!]
 		\centering
 		\includegraphics[width=0.5\linewidth]{img/ur5robot.png}
-		\caption[UR5 Koolabortív robot]{UR5 Kollaboratív robot (forrás: http://universalrobots.com)}
+		\caption[UR5 Kollaboratív robot]{UR5 Kollaboratív robot (Forrás \cite{robotkar-kep})}
 		\label{fig:robotik-bin-picking}
 	\end{figure}
 	
