corrected typo and alignment

--- a/oeNIKstyle.sty
+++ b/oeNIKstyle.sty
@@ -117,7 +117,7 @@
 			 \normalsize{Hallgató neve:} \hfill
 			\textbf\itshape\textbf{\@author}\unskip\strut\par
 			
-			{\bfseries \the\year}\hspace{1.9cm}
+			{\bfseries \the\year}\hspace{1.8cm}
 			\normalsize{Hallgató törzskönyvi száma:}
 			\hfill \textbf\itshape\textbf{\@torzsKonyvSzam}\unskip\strut
 		}
@@ -272,7 +272,7 @@
             \hspace{9.85cm}
             \begin{minipage}{5cm} 
                 \begin{center}
-                    hallagtó aláírása
+                    hallgató aláírása
     		    \end{center}
     		\end{minipage}
     		\vspace{1cm}
