added acronyms template

--- a/document.tex
+++ b/document.tex
@@ -2,7 +2,7 @@
 \usepackage{oeNIKstyle}
 
 \usepackage[utf8]{inputenc}
-
+\usepackage[nohyperlinks]{acronym}
 \usepackage{float}
 \usepackage{graphicx}
 \usepackage{subfig}
@@ -68,6 +68,8 @@
 	\setalgorithmcounter % set up algorithm numbering
 	
 	\maketoc
+	
+	\input{acronyms}
 	
 	\section{Bevezetés}
 	A dokumentum célja, hogy kiindulópontot adjon a szakdolgozat és diplomamunka elkészítéséhez LaTex-ben környezetben. 
