added acknowledgment template

--- a/document.tex
+++ b/document.tex
@@ -346,5 +346,8 @@
 		\label{appendix:ur_5_upload}
 		\inputminted{xml}{code/ur5_upload.launch}
 	\end{appendices}
+	
+	\makeacknowledgement
+	
 \end{document}
 
