added help to include external pdf file

--- a/document.tex
+++ b/document.tex
@@ -67,6 +67,9 @@
 	\setcounter{page}{1} % start counting pages from here
 	\setalgorithmcounter % set up algorithm numbering
 	
+	% a mintában foglaltak helyett dokumentumok beillesztése pl. más borító lap beillesztése:
+	%\includepdf[pages=-]{includes/boritolap.pdf}
+	
 	\maketoc
 	
 	\input{acronyms}
