updated to current dean

--- a/oeNIKstyle.sty
+++ b/oeNIKstyle.sty
@@ -206,8 +206,8 @@
         \hspace{9.85cm}
         \begin{minipage}{5cm} 
             \begin{center}
-                Dr. Kozlovszky Miklós\\
-                intézetigazgató
+                Dr. Eigner György\\
+                mb. intézetigazgató
 		    \end{center}
 		\end{minipage}
 		\vspace{1cm}
